Closed
Bug 436722
Opened 15 years ago
Closed 15 years ago
Bank of America Online Banking: Online Banking Overview does not load fully
Categories
(Core :: DOM: HTML Parser, defect, P1)
Core
DOM: HTML Parser
Tracking
()
VERIFIED
FIXED
People
(Reporter: johnh30024, Assigned: mrbkap)
References
()
Details
(4 keywords)
Attachments
(2 files)
268 bytes,
text/html
|
Details | |
2.11 KB,
patch
|
sicking
:
review+
sicking
:
superreview+
samuel.sidler+old
:
approval1.9.0.2+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9) Gecko/2008051206 Firefox/3.0 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9) Gecko/2008051206 Firefox/3.0 On IE7 and Firefox 2, I see a lot of marketing information. I see barely anything with Firefox 3 RC1. Reproducible: Always Steps to Reproduce: 1. http://www.bankofamerica.com/onlinebanking/ 2. 3. Actual Results: See a lot of white space Expected Results: See some information Uninstalled RC1, installed 2.0, site worked. Installed 3.0 again, it doesn't work. No addons.
Also, you'll see a redirected page that asks you "Select Your State Please tell us where you bank so we can give you information for your location." After that, IE7 and FF2 go to marketing info. On FF3, you get the core layout of the page but the content is mising.
Comment 3•15 years ago
|
||
Confirmed with Firefox 3 on Windows XP. In order to reproduce this bug, you first need to select a location. I tried "California". Regression range is http://bonsai.mozilla.org/cvsquery.cgi?module=PhoenixTinderbox&date=explicit&mindate=1184974080&maxdate=1184978879 Caused by Bug 387691 ?
Blocks: 387691
Component: General → HTML: Parser
Flags: blocking1.9.0.1?
Keywords: qawanted,
regression
Product: Firefox → Core
QA Contact: general → parser
Version: unspecified → Trunk
Comment 4•15 years ago
|
||
Changing hardware/OS to all since I see this both on Mac trunk and Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9) Gecko/2008061004 Firefox/3.0. Safari renders the page fine no matter which state you choose from the dropdown.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: qawanted
OS: Windows XP → All
Hardware: PC → All
Updated•15 years ago
|
Flags: blocking1.9.1?
Comment 5•15 years ago
|
||
This seems to indeed have been caused by bug 387691. In IE, <link> is allowed as a direct child of <table>. Mozilla used to move the <link> into the <head>, but after bug 387691 not anymore. It's now moving the <link> after the <table>. There also seems to be a reflow issue involved with this, so I guess this could also be solved by fixing that reflow issue.
Assignee | ||
Comment 6•15 years ago
|
||
When fixing bug 387691, I forgot that <table>'s entry in nsElementTable doesn't allow arbitrary kids based on their parent model. Adding the special |kLegalOpen| flag to these elements allows them to become children of <table>. Currently, HTML5 doesn't allow <link> as a child of <table>, preferring to ship it out like we do with text, but both IE and Opera disagree (Safari appears to ship <link> to <head> still). I'm opting to follow IE here, especially as that was the original intent of bug 387691. I'll send e-mail to the whatwg list about it.
Assignee: nobody → mrbkap
Status: NEW → ASSIGNED
Attachment #327399 -
Flags: superreview?(jonas)
Attachment #327399 -
Flags: review?(jonas)
Updated•15 years ago
|
Flags: wanted1.9.0.x+
Flags: blocking1.9.0.1?
Flags: blocking1.9.0.1-
Attachment #327399 -
Flags: superreview?(jonas)
Attachment #327399 -
Flags: superreview+
Attachment #327399 -
Flags: review?(jonas)
Attachment #327399 -
Flags: review+
Assignee | ||
Comment 7•15 years ago
|
||
Pushed as changeset a1bc3ae5d5a8.
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Assignee | ||
Comment 9•15 years ago
|
||
Comment on attachment 327399 [details] [diff] [review] Proposed fix This applies to 1.9.
Attachment #327399 -
Flags: approval1.9.0.2?
Comment 10•15 years ago
|
||
Comment on attachment 327399 [details] [diff] [review] Proposed fix Approved for 1.9.0.2. Please land in CVS. a=ss
Attachment #327399 -
Flags: approval1.9.0.2? → approval1.9.0.2+
Comment 12•15 years ago
|
||
Verified fix on Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.0.2pre) Gecko/2008081904 GranParadiso/3.0.2pre
Status: RESOLVED → VERIFIED
Keywords: fixed1.9.0.2 → verified1.9.0.2
Comment 13•14 years ago
|
||
Fix landed before branching.
Comment 14•14 years ago
|
||
Verified fix on Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1b3pre) Gecko/20090130 Shiretoko/3.1b3pre Ubiquity/0.1.5
Keywords: fixed1.9.1 → verified1.9.1
You need to log in
before you can comment on or make changes to this bug.
Description
•