Allow <link> to be opened, even as the direct child of a <table>. bug 436722, r+sr=sicking